--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "filesizecompressor",
   "version": "1.0.0",
-  "description": "- should accept image files, audio and video\r  - service worker will be on render to avoid vercel 4.5 payload limit\r  - no storage \r  - express, and dependencies\r  - commonJS\r  - static frontend",
-  "main": "index.js",
+  "description": "Service for compressing image, audio, and video files using Express. No storage, static frontend optional.",
+  "type": "module",
+  "main": "server.js",
   "scripts": {
-    "start": "node --experimental-specifier-resolution=node server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/devchollo/filesizecompressor.git"
   },
-  "keywords": [],
+  "keywords": ["express", "compressor", "image", "video", "audio"],
   "author": "",
   "license": "ISC",
   "bugs": {
@@ -24,8 +25,10 @@
     "express": "^5.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "multer": "^2.0.2",
-    "nodemon": "^3.1.10",
     "sharp": "^0.34.3",
     "uuid": "^11.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
