--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "type": "git",
     "url": "git+https://github.com/devchollo/filesizecompressor.git"
   },
-  "keywords": ["express", "compressor", "image", "video", "audio"],
+  "keywords": [
+    "express",
+    "compressor",
+    "image",
+    "video",
+    "audio"
+  ],
   "author": "",
   "license": "ISC",
   "bugs": {
@@ -22,7 +28,7 @@
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.3",
     "multer": "^2.0.2",
     "sharp": "^0.34.3",
